Fix CI/CD build: Enable C++ bindings, add missing deps, support custom libsigrok repo
- Add libsigrok_repo input to workflow for custom repository support (e.g., rssdev10/libsigrok:siglent_sds800)
- Enable C++ bindings (--enable-cxx) for libsigrok on all platforms (required by PulseView)
- macOS: Install glibmm, libsigc++, boost packages
- Linux: Install libglibmm-2.4-dev, libsigc++-2.0-dev, libboost-dev
- Fix libserialport clone to use LIBSERIALPORT_REF instead of LIBSIGROK_REF
- Add clone_repo helper function in common.sh to support owner/repo or full URLs
- Pass environment variables from workflow inputs to build scripts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,10 @@ on:
         description: "pulseview ref (branch/tag/SHA)"
         required: true
         default: "master"
+      libsigrok_repo:
+        description: "libsigrok repository (owner/repo or URL)"
+        required: true
+        default: "sigrokproject/libsigrok"
       libsigrok_ref:
         description: "libsigrok ref (branch/tag/SHA)"
         required: true
@@ -43,6 +47,11 @@ concurrency:
 
 env:
   SIGROK_ORG: sigrokproject
+  LIBSIGROK_REPO: ${{ github.event.inputs.libsigrok_repo }}
+  LIBSIGROK_REF: ${{ github.event.inputs.libsigrok_ref }}
+  LIBSIGROKDECODE_REF: ${{ github.event.inputs.libsigrokdecode_ref }}
+  LIBSERIALPORT_REF: ${{ github.event.inputs.libserialport_ref }}
+  PULSEVIEW_REF: ${{ github.event.inputs.pulseview_ref }}
   DEPS_DIR: ${{ github.workspace }}/deps
   OUT_DIR:  ${{ github.workspace }}/out
   # Keep builds deterministic-ish
