--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,9 +152,9 @@ jobs:
           # ARM64 GitHub-hosted macOS runners exist (macos-14 arm64)
           - target: arm64
             runs_on: macos-14
-          # Intel is supported via macos-13 or macos-latest-large
+          # Intel is supported via macos-15-large (macOS 15 on Intel)
           - target: amd64
-            runs_on: macos-13
+            runs_on: macos-15-large
     runs-on: ${{ matrix.runs_on }}
 
     steps:
