--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [x86_64, aarch64]
+        # Disable aarch64 for now due to QEMU segfaults - can enable later with native ARM runners
+        arch: [x86_64]  
+        # arch: [x86_64, aarch64]
     steps:
       - uses: actions/checkout@v4
 
