Fix Windows MXE prereqs and Linux linuxdeploy AppDir conflict
- Windows: Add autopoint, gperf, intltool, lzip, python3-mako
- Linux: Remove existing AppDir and provide executable/desktop/icon explicitly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,7 +120,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-            git ca-certificates bash coreutils
+            git ca-certificates bash coreutils autoconf automake libtool pkg-config \
+            autopoint gperf intltool lzip python3-mako
 
       - name: Build Windows (MXE) artifact
         run: |
