Fix MXE libtool-bin and Linux AppDir ordering
- Windows: Add libtool-bin package for MXE
- Linux: Remove AppDir before make install, fix file paths

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,7 +120,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-            git ca-certificates bash coreutils autoconf automake libtool pkg-config \
+            git ca-certificates bash coreutils autoconf automake libtool libtool-bin pkg-config \
             autopoint gperf intltool lzip python3-mako
 
       - name: Build Windows (MXE) artifact
