--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,11 @@ on:
       libsigrok_repo:
         description: "libsigrok repository (owner/repo or owner:branch)"
         required: true
-        default: "rssdev10/libsigrok"
+        default: "sigrokproject/libsigrok"
       libsigrok_ref:
         description: "libsigrok ref (branch/tag/SHA)"
         required: true
-        default: "siglent_sds800"
+        default: "master"
       libsigrokdecode_ref:
         description: "libsigrokdecode ref (branch/tag/SHA)"
         required: true
